# mediapipewith3cams-code

./: AGENTS.md  README.md  apply_bbox_constraint.py  batch2_3dposeestimation.py  batch3_3dposeestimation.py  batch3_3dposeestimation0.py  batch_3dposeestimation.py  batch_pose_verification.py  calc_metrics.py  calc_metrics_viz.py  check_3d_csv_quality.py  check_data.py  check_stability_sorted.py  convert_3cams_npz_to_legacy.py  court_filter_postprocess.py  create_3d_animation.py  create_3d_comparison.py  create_3d_grid_animation.py  create_3d_snapshot.py  detect_ball_only.py  expand_court_json.py  filter_csv_by_court.py  filtered.py  filtered_3dplot.py  fix_csv.py  fix_csv_test1.py  fix_ids_by_release_swap.py  fix_pose_csv_adaptive.py  hybrid_dual.py  hybrid_dual_bbox.py  hybrid_dual_final.py  hybrid_dual_final_patched.py  hybrid_dual_v2.py  hybrid_dual_v3.py  hybrid_dual_v4_chatgpt.py  hybrid_dual_v4_gemini.py  hybrid_test.py  hybrid_test3.py  make_lstm_dataset_calc_metrics.py  manual_goal_pick.py  (+26 more)
